# Image-Analyzer-in-C

./: README.md  image_processing.c
proj1_final/: CMakeLists.txt  README.md
proj1_final/src/: app.c  app.h  font_utils.c  font_utils.h  image_processing.h  ui.c  ui.h
src/: main.c
